--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-bearer-token": "^3.0.0",
+    "mongoose": "^9.0.0",
     "tsx": "^4.20.6"
   },
   "devDependencies": {
