--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node --import=tsx --watch --env-file=.env server.ts"
+    "dev": "node --import=tsx --watch --env-file=.env server.mts"
   },
   "dependencies": {
     "cors": "^2.8.5",
